<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="GreenMasterSettingsStena" Id="{259dd8ac-41eb-4794-9d66-83c9fb8bc9e0}">
    <Declaration><![CDATA[// Settings for GreenMaster
TYPE GreenMasterSettingsStena :
STRUCT
	RemoteStart: WORD := 1; // Remote (WebPort) unit activation (0=unit off, 1=normal speed, 2=high speed)
	ResetAlarms: BOOL := FALSE; // Reset alarms
	VentilationEN: BOOL := TRUE; // Enable ventilation
	TemperatureControlEN: BOOL := TRUE; // Enable temperature control (during ventilation)
	Temperature_SP: LREAL := 20.0; // Temperature Set Point, C
	TemperatureControlPV: INT := 0; // 0 = Use GT11, 1 = Use GT42
	SetPointOffsetCurve: SetPointOffsetCurve;
	TemperatureControl_P: REAL := 0.05; // Temperature control P
	TemperatureControl_I: TIME := T#2M; // Temperature control I
	TemperatureControl_D: TIME := T#0M; // Temperature control D
	StartupHeatRecoveryTime: TIME := TIME#0M; // Time at startup to recover
	PostFireVentilationTime: TIME := TIME#1M; // Time to ventilate when returning to operation after fire alarm
	SupplyFanControlMode: FanControlTypes := FanControlTypes.Pressure; // Control mode (pressure or flow) for supply air
	SupplyFan_SP: REAL := 320; // Supply air control Set Point
	SupplyFanHighSpeed_SP: REAL := 410; // Supply air control high speed Set Point
	SupplyFanControl_P: REAL := 0.002; // Supply air control P
	SupplyFanControl_I: TIME := T#2M; // Supply air control I
	ExtractFanControlMode: FanControlTypes := FanControlTypes.Pressure; // Control mode (pressure or flow) for extract air
	ExtractFan_SP: REAL := 200; // Extract air control Set Point
	ExtractFanHighSpeed_SP: REAL := 250; // Extract air control high speed Set Point
	ExtractFanControl_P: REAL := 0.002; // Extract air control P
	ExtractFanControl_I: TIME := T#2M; // Extract air control I
	NightCoolingEN: BOOL := FALSE; // Night cooling activation
	NightCoolingTemperatureSP: REAL := 18.0; // Night cooling temperature Set Point, C
	FanStopDelayTime: TIME := T#2M; // Fan stop delay cool down period
	WatchdogEnabled: BOOL := FALSE; // Watchdog enable - enables unit on watchdog update failure 
	Watchdog: INT := 0; // Watchdog counter to be changed at a minimum every 5 minutes (when enabled)  
	NightCooling_V: BOOL; // Activate nigh time cooling  
	
	SV31_M: BOOL; // Recycling control valve manual override
	TF1_M: BOOL; // Supply air fan control manual override
	FF1_M: BOOL; // Extract air fan control manual override
	SV21_M: BOOL; // Heat supply pump control manual override

	SV31_MCMD: REAL; // Recycling control valve manual override value
	TF1_MCMD: REAL; // Supply air fan control manual override value
	FF1_MCMD: REAL; // Extract air fan control manual override value
	SV21_MCMD: REAL; // Heat supply pump control manual override value

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>