<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="FanControlTypes" Id="{4bd99fee-ba9a-4d98-a953-2ff1a1da554c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE FanControlTypes :
(
	Pressure := 0, // Pressure control 
	Flow, // Flow control
	SlaveFlow, // Slave flow control
	Const // Constant setting control
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>