<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="AlarmsA" Id="{86ff6793-8f0e-4136-82cc-f84389a9fd21}">
    <Declaration><![CDATA[TYPE AlarmsA :
STRUCT
	FireExtract: BOOL;
	FireExtractTemperature: BOOL;
	FireExtractPressure: BOOL;
	FireExtractExternal: BOOL;
	FireLocal: BOOL;
	FireSupply: BOOL;
	Freeze: BOOL;
	Fuse: BOOL;
	Cold: BOOL;
	Aux: BOOL;
	FirePanelSupplyStart: BOOL;
	FirePanelSupplyStop: BOOL;
	FirePanelExtractStart: BOOL;
	FirePanelExtractStop: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>