<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="ADS_CTH" Id="{7c476450-b4d3-4481-ba09-185ae0de07d1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL PERSISTENT
	Tags2: CTH_LA02;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>